[tool.poetry]
name = "llm-rag-agent"
version = "0.1.0"
description = ""
authors = ["Camille Brodin <camillebrodin@outlook.fr>"]
readme = "README.md"
packages = [{include = "LLM-RAG-Agent"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
